# digitalwallet

./: .gitignore  README.md  package-lock.json  package.json  startup.bat  startup.sh
Backend/: .env  .gitignore  pyproject.toml  requirements.txt
Backend/app/: check_database.py  config.py  database.db  database.py  dataloader.py  generateQRCode.py  generateQRCode2.py  main.py  security.py  transactions.csv
Backend/app/models/: UserVoucherLink.py  account.py  card.py  category.py  loyalty_card.py  merchant.py  qr_image.py  transaction.py  user.py  vouchers.py  wallet.py
Backend/app/repositories/: UserVoucherLink_respository.py  account_repository.py  base_repository.py  card_repository.py  category_repository.py  loyalty_card_repository.py  merchant_repository.py  qr_image_repository.py  transaction_repository.py  user_repository.py  voucher_repositoary.py  wallet_repository.py
Backend/app/routers/: user_route.py
Backend/app/routes/: account_route.py  auth_route.py  button_api_route.py  card_route.py  category_route.py  loyalty_card_route.py  merchant_route.py  qr_image_route.py  test_protected_route.py  transaction_route.py  user_route.py  voucher_route.py  wallet_route.py
Backend/app/schemas/: account_schema.py  auth_schema.py  card_schema.py  category_schema.py  loyalty_card_schema.py  merchant_schema.py  qr_image_schema.py  transaction_schema.py  user_schema.py  voucher_schema.py
Backend/tests/: __init__.py  conftest.py  test_auth_route.py
MockPOS/: Dockerfile-app  Dockerfile-interface  docker-compose.yml  pyproject.toml
MockPOS/app/: cli.py  main.py  server.py
MockPOS/interface/: .env  docker-start.sh  interface.py  interface.tcss  package-lock.json  package.json
(+161 files in other folders)
